# FrenchIncomeGroupByCity

./: README.md  pyproject.toml
data_validation/GE/great_expectations/: great_expectations.yml
data_validation/GE/great_expectations/checkpoints/: checkpoint_for_geographic.yml  checkpoint_for_industry.yml
data_validation/GE/great_expectations/expectations/: .ge_store_backend_id
data_validation/GE/great_expectations/expectations/base_department_validation/: rule.json
data_validation/GE/great_expectations/expectations/geographic_validation/: rule.json  rule.json.bkp
notebooks/: 01.DataIngestion.ipynb  02.DataProfiling.ipynb  03.DataValidationIndustry.ipynb  04.DataValidationGeoloc.ipynb
