[tool.poetry]
name = "frenchincomegroupbycity"
version = "0.1.0"
description = ""
authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2.1"
jupyter = "^1.0.0"
numpy = "^1.22.3"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
basemap = "^1.3.2"
plotly = "^5.6.0"
basemap-data-hires = "^1.3.2"
pandas-profiling = "^3.1.0"
great-expectations = "^0.14.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
